fix flickering background

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -23,9 +23,9 @@
     z-index: 999999;
 }
 
-.transparentBACK.spinner {
-    --color-dark: transparent;
-}
+/*.transparentBACK.spinner {*/
+/*    --color-dark: transparent;*/
+/*}*/
 
 .container {
     width: 80vw;
